--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "splune",
   "version": "1.0.0",
-  "description": "",
+  "description": "Letters.js, an extremely tiny library for text splitting & effects.",
   "main": "src/splune.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "letters",
+    "splitting",
+    "microlibrary"
+  ],
+  "author": "Didier Catz",
+  "license": "MIT"
 }
